// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundImage 1`] = `
.pf-c-background-image.css-va8362 {
  display: block;
}

<div
  className="pf-c-background-image css-va8362"
>
  <svg
    className="svg-filter"
    xmlns="http://www.w3.org/2000/svg"
  >
    <filter
      id="image_overlay"
      width="100%"
    >
      <feColorMatrix
        type="matrix"
        values="1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 1 0"
      />
      <feComponentTransfer
        colorInterpolationFilters="sRGB"
        result="duotone"
      >
        <feFuncR
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncG
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncB
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncA
          tableValues="0 1"
          type="table"
        />
      </feComponentTransfer>
    </filter>
  </svg>
</div>
`;

exports[`BackgroundImage 2`] = `
.pf-c-background-image.css-va8362 {
  display: block;
}

<div
  className="pf-c-background-image css-va8362"
>
  <svg
    className="svg-filter"
    xmlns="http://www.w3.org/2000/svg"
  >
    <filter
      id="image_overlay"
      width="100%"
    >
      <feColorMatrix
        type="matrix"
        values="1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 1 0"
      />
      <feComponentTransfer
        colorInterpolationFilters="sRGB"
        result="duotone"
      >
        <feFuncR
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncG
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncB
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncA
          tableValues="0 1"
          type="table"
        />
      </feComponentTransfer>
    </filter>
  </svg>
</div>
`;

exports[`allows passing in a single string as the image src 1`] = `
.pf-c-background-image.css-15v5rkq {
  display: block;
}

<div
  className="pf-c-background-image css-15v5rkq"
>
  <svg
    className="svg-filter"
    xmlns="http://www.w3.org/2000/svg"
  >
    <filter
      id="image_overlay"
      width="100%"
    >
      <feColorMatrix
        type="matrix"
        values="1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 1 0"
      />
      <feComponentTransfer
        colorInterpolationFilters="sRGB"
        result="duotone"
      >
        <feFuncR
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncG
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncB
          tableValues="0.086274509803922 0.43921568627451"
          type="table"
        />
        <feFuncA
          tableValues="0 1"
          type="table"
        />
      </feComponentTransfer>
    </filter>
  </svg>
</div>
`;
